--- a/Pages/homepage.html
+++ b/Pages/homepage.html
@@ -126,47 +126,48 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>
             </div>
             <div class="container">
-                <div class="row align-items-start">
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/jujutsu kaisen.jpe" class="img-fluid fixed-size" alt="Jujutsu Kaisen">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/demon slayer.webp" class="img-fluid fixed-size" alt="Demon Slayer">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/filters_quality(95)format(webp).webp" class="img-fluid fixed-size" alt="Filters">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/frieren.avif" class="img-fluid fixed-size" alt="Frieren">
-                        </div>
-                    </div>
-                </div>
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/blue lock season 2.webp" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/re zero starting life in another world.avif" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/shangri la frontier.avif" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/dan da dan.avif" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/fairy tail 100 years quest.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/trillion game.avif" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/mecha ude mechanical arms.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/the stories of girls who couldn't be magicians.avif" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
