--- a/Pages/movieslibrary.html
+++ b/Pages/movieslibrary.html
@@ -94,6 +94,102 @@
                 <div class="row align-items-start">
                     <div class="col">
                         <div class="img-wrapper">
+                            <img src="../images/sword art online.avif" class="img-fluid fixed-size" alt="Jujutsu Kaisen">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/full metal alchemist.avif" class="img-fluid fixed-size" alt="Demon Slayer">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/mushoku tensei jobless reincarnation.avif" class="img-fluid fixed-size" alt="Filters">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/laid back camp.jpe" class="img-fluid fixed-size" alt="Frieren">
+                        </div>
+                    </div>
+                </div>
+            
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/your lie in april.jpe" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/horimiya.avif" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/konosuba gods blessing on this wonderful world.jpe" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/the disastrous life of saiki k.jpe" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <h2>Recent Releases</h2>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/blue lock season 2.webp" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/re zero starting life in another world.avif" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/shangri la frontier.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/dan da dan.avif" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/fairy tail 100 years quest.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/trillion game.avif" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/mecha ude mechanical arms.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/the stories of girls who couldn't be magicians.avif" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <h2>Most Popular</h2>
+                </div>
+                <div class="row align-items-start">
+                    <div class="col">
+                        <div class="img-wrapper">
                             <img src="../images/jujutsu kaisen.jpe" class="img-fluid fixed-size" alt="Jujutsu Kaisen">
                         </div>
                     </div>
@@ -110,102 +206,6 @@
                     <div class="col">
                         <div class="img-wrapper">
                             <img src="../images/frieren.avif" class="img-fluid fixed-size" alt="Frieren">
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="row align-items-center">
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <h2>Recent Releases</h2>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row align-items-center">
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <h2>Most Popular</h2>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
@@ -237,44 +237,44 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/vinland saga.avif" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/black lagoon.avif" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/mob psycho 100.jpe" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/fate stay night.avif" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/kill la kill.avif" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/Akame ga kill.jpg" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/gurren lagann.avif" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/bungo stray dogs.avif" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
