--- a/Pages/homepage.html
+++ b/Pages/homepage.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/homepage.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
-<body>
-    <header> 
+<body class="homepage-body">
+    <header class="homepage-header"> 
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-6">
@@ -120,7 +120,7 @@
             </div>
         </section>
 
-        <section class="products">
+        <section class="homepage-products">
             <div class="container">
                 <h2>Recent Releases</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>
@@ -128,46 +128,46 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/blue lock season 2.webp" class="img-fluid fixed-size" alt="Solo Leveling">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/blue lock season 2.webp" class="img-fluid homepage-fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/re zero starting life in another world.avif" class="img-fluid fixed-size" alt="Undead Unluck">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/re zero starting life in another world.avif" class="img-fluid homepage-fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/shangri la frontier.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/shangri la frontier.avif" class="img-fluid homepage-fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/dan da dan.avif" class="img-fluid fixed-size" alt="Fate">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/dan da dan.avif" class="img-fluid homepage-fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
 
                 <div class="row align-items-center">
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/fairy tail 100 years quest.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/fairy tail 100 years quest.avif" class="img-fluid homepage-fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/trillion game.avif" class="img-fluid fixed-size" alt="Undead Unluck">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/trillion game.avif" class="img-fluid homepage-fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/mecha ude mechanical arms.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/mecha ude mechanical arms.avif" class="img-fluid homepage-fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
-                        <div class="img-wrapper">
-                            <img src="../images/the stories of girls who couldn't be magicians.avif" class="img-fluid fixed-size" alt="Fate">
+                        <div class="homepage-img-wrapper">
+                            <img src="../images/the stories of girls who couldn't be magicians.avif" class="img-fluid homepage-fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
