--- a/pages/singleview.html
+++ b/pages/singleview.html
@@ -4,11 +4,11 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
 
-	  <link rel="stylesheet" href="../main.css">
 	  <link rel="preconnect" href="https://fonts.googleapis.com">
 	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-  	
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="../css/main.css">
   	
 </head>
 <body>
@@ -21,10 +21,12 @@
                 <div class="col-6 text-end">
                     <nav>
                         <ul class="nav">
-                            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+
                             <li class="nav-item">
-                                <a href="movieslibrary.html" class="nav-link">Anime</a>
+                                <a href="homepage.html" class="nav-link">Home</a>
                             </li>
+                            <li class="nav-item"><a href="#" class="nav-link">Anime</a></li>
+                            
                             <!-- Updated Anime Section with Dropdown -->
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" id="animeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Genres</a>
@@ -72,45 +74,46 @@
     </header>
 
 
+  	
+<div class="dark-section d-flex align-items-center justify-content-center">
+    
+  <div class="image-container">
+    <img class="absolute-image" src="../assets/images/5puku5ccuag51.jpg" alt="Descriptive Alt Text">
+  </div>
 
+    <div class="text-container">
+        <div class="absolute-text d-flex">Demon Slayer</div>
+    </div>
 
-<div class="position-relative bg-white  row">
-    <div class="position-absolute bg-black col-xxl-12"></div>
-    <img class="position-absolute col-xxl-3" src="../assets/images/5puku5ccuag51.jpg" />
-    <p class="position-absolute text-white fs-1 fw-medium font-family-Noto Sans JP col-xxl-4 m-0 px-3 py-2">Demon Slayer</p>
-    <p class="position-absolute text-white fs-1 fw-medium font-family-Noto Sans JP col-xxl-2 m-0 px-3 py-2">鬼滅の刃</p>
-    <div class="position-absolute">
-        <div class="left-0 top-0 position-absolute">
-            <img class="position-absolute rounded-4 col-xxl-0" src="https://via.placeholder.com/61x61" />
-            <p class="position-absolute text-white fs-5 font-family-Noto Sans JP col-xxl-2 m-0 px-3 py-2">Blossoms of Fate</p>
-            <p class="position-absolute text-white fs-5 font-family-Noto Sans JP col-xxl-1 m-0 px-3 py-2">Samurai’s Echo</p>
-            <p class="position-absolute text-white fs-5 font-family-Noto Sans JP col-xxl-1 m-0 px-3 py-2">Koi Legends</p>
-            <p class="position-absolute text-white fs-1 font-family-Noto Sans JP col-xxl-2 m-0 px-3 py-2">...</p>
-            <div class="position-absolute">
-                <p class="left-0 top-0 position-absolute text-white fs-2 font-family-Noto Sans JP col-5 m-0 px-3 py-2">Help</p>
-                <p class="position-absolute text-white fs-2 font-family-Noto Sans JP col-6 m-0 px-3 py-2">Login</p>
-            </div>
-            <div class="px-1 position-absolute bg-orange rounded-1 col-xxl-2 row justify-content-center align-items-center">
-                <div class="position-relative col-1"></div>
-                <p class="text-dark fs-5 fw-normal font-family-Noto Sans JP col-11 m-0 px-3 py-2">Download Nihon.net</p>
-            </div>
-            <div class="position-absolute col-xxl-0"></div>
-            <p class="position-absolute text-white fs-5 font-family-Noto Sans JP col-xxl-1 m-0 px-3 py-2">Store</p>
+  <div class="text-container">
+    <div class="absolute-text-jp d-flex">鬼滅の刃</div>
+  </div>
+
+    <div class="watchlist-container d-flex">
+        <img class="bookmark-icon" src="../assets/images/bookmark.svg" alt="Bookmark Icon">
+        <span class="watchlist-text">Add To Watchlist</span>
+    </div>
+
+    <div class="text-container-des">
+        It is the Taisho Period in Japan. Tanjiro Kamado, a kindhearted boy who sells charcoal for a living, finds his family slaughtered by a demon. To make matters worse, his younger sister Nezuko, the sole survivor, has been transformed into a demon herself.<br><br>
+        Though devastated by this grim reality, Tanjiro resolves to become a Demon Slayer so that he can turn his sister back into a human, and kill the demon that massacred his family.
+    </div>
+
+    <div class="tag-container">
+        <div class="tag-box">
+          <span class="tag-text">ACTION</span>
         </div>
-        <div class="position-absolute col-xxl-0 row"></div>
+        <div class="tag-box">
+          <span class="tag-text">FANTASY</span>
+        </div>
+        <div class="tag-box">
+          <span class="tag-text">SHONEN</span>
+        </div>
     </div>
-    <div class="position-absolute">
-        <p class="position-absolute text-orange fs-5 fw-medium font-family-Noto Sans JP col-9 m-0 px-3 py-2">Add To Watchlist</p>
-        <div class="position-absolute col-2"></div>
-        <div class="left-0 top-0 position-absolute border border-1 border-orange col-12"></div>
-    </div>
-    <p class="position-absolute text-white fs-5 fw-medium font-family-Noto Sans JP col-xxl-5 m-0 px-3 py-2">It is the Taisho Period in Japan. Tanjiro Kamado, a kindhearted boy who sells charcoal for a living, finds his family slaughtered by a demon. To make matters worse, his younger sister Nezuko, the sole survivor, has been transformed into a demon herself.<br/><br/>Though devastated by this grim reality, Tanjiro resolves to become a Demon Slayer so that he can turn his sister back into a human, and kill the demon that massacred his family.</p>
-    <div class="position-absolute bg-orange col-xxl-1"></div>
-    <div class="position-absolute bg-orange col-xxl-1"></div>
-    <div class="position-absolute bg-orange col-xxl-1"></div>
-    <p class="position-absolute text-white fs-6 fw-medium font-family-Noto Sans JP col-xxl-0 m-0 px-3 py-2">ACTION</p>
-    <p class="position-absolute text-white fs-6 fw-medium font-family-Noto Sans JP col-xxl-0 m-0 px-3 py-2">FANTASY</p>
-    <p class="position-absolute text-white fs-6 fw-medium font-family-Noto Sans JP col-xxl-0 m-0 px-3 py-2">SHONEN</p>
 </div>
+  	
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
