--- a/pages/singleview.html
+++ b/pages/singleview.html
@@ -11,12 +11,12 @@
       <link rel="stylesheet" href="../css/main.css">
   	
 </head>
-<body>
+<body class="single-body">
     <header class="homepage-header"> 
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-6">
-                    <img src="../images/logo.png" class="img-fluid" alt="Nihon Mystica" style="width: 100px; height: auto;">
+                    <img src="../assets/images/Script Sorcerers Logo.png" class="img-fluid" alt="Nihon Mystica" style="width: 100px; height: auto;">
                 </div>
                 <div class="col-6 text-end">
                     <nav>
@@ -49,7 +49,7 @@
                             <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link">
-                                    <img src="../images/Watchlist icon.png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
+                                    <img src="../assets/images/Watchlist Icon (1).png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
                                     Watchlist
                                 </a>
                             </li>
@@ -59,7 +59,7 @@
                                 <form id="searchForm">
                                     <input type="text" id="searchInput" placeholder="Search..." class="search-input">
                                     <button type="submit" class="search-button">
-                                        <img src="../images/search icon.png" alt="Search" class="search-icon">
+                                        <img src="../assets/images/Search Icon (1).png" alt="Search" class="search-icon">
                                     </button>
                                 </form>
                             </li>                               
@@ -74,11 +74,19 @@
     </header>
 
 
+    <section class="banner">
+        <div class="container">
+            <!--<h2>Browse Anime</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>-->
+        </div>
+    </section>
+
+
   	
 <div class="dark-section d-flex align-items-center justify-content-center">
     
   <div class="image-container">
-    <img class="absolute-image" src="../assets/images/5puku5ccuag51.jpg" alt="Descriptive Alt Text">
+    <img class="absolute-image" src="../assets/images/Demon Slayer (1).webp" alt="Descriptive Alt Text">
   </div>
 
     <div class="text-container">
@@ -89,10 +97,18 @@
     <div class="absolute-text-jp d-flex">鬼滅の刃</div>
   </div>
 
-    <div class="watchlist-container d-flex">
+  <div class="star-container">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
+  </div>
+
+    <button class="watchlist-container d-flex">
         <img class="bookmark-icon" src="../assets/images/bookmark.svg" alt="Bookmark Icon">
         <span class="watchlist-text">Add To Watchlist</span>
-    </div>
+    </button>
 
     <div class="text-container-des">
         It is the Taisho Period in Japan. Tanjiro Kamado, a kindhearted boy who sells charcoal for a living, finds his family slaughtered by a demon. To make matters worse, his younger sister Nezuko, the sole survivor, has been transformed into a demon herself.<br><br>
@@ -110,9 +126,39 @@
           <span class="tag-text">SHONEN</span>
         </div>
     </div>
+        
 </div>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 address">
+                <p>400 University Drive Suite 200 Coral Gables, FL 33134 USA</p>
+            </div>
+            <div class="col-md-6 text-end footer-links">
+                <a href="#">Payment Options</a> |
+                <a href="#">Returns</a> |
+                <a href="#">Privacy Policies</a>
+            </div>
+        </div>
+        <div class="row newsletter">
+            <div class="col-12 text-center">
+                <p>Newsletter</p>
+                <form>
+                    <input type="email" placeholder="Enter Your Email Address" class="form-control w-50 mx-auto">
+                    <button type="submit" class="btn btn-primary mt-2">SUBSCRIBE</button>
+                </form>
+            </div>
+        </div>
+        <div class="row copyright">
+            <div class="col-12 text-center">
+                <p>© 2023 Nihon Mystica. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
   	
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
