--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -14,22 +14,24 @@
 
 <body>
 
-    <div style="width: 100%; height: 100%; position: relative; background: #1C1C1C">
-        <div style="left: 113px; top: 678px; position: absolute; color: white; font-size: 24px; font-family: Noto Sans JP; font-weight: 500; word-wrap: break-word">One Piece</div>
-        <div style="left: 906px; top: 170px; position: absolute; color: white; font-size: 48px; font-family: Noto Sans JP; font-weight: 500; word-wrap: break-word">My List</div>
-        <img style="width: 274px; height: 392px; left: 113px; top: 281px; position: absolute" src="https://via.placeholder.com/274x392" />
-        <div style="width: 33px; height: 33px; left: 305px; top: 718px; position: absolute">
-            <div style="width: 28.74px; height: 25.07px; left: 2.13px; top: 4.12px; position: absolute; border: 2px white solid"></div>
-        </div>
-        <div style="width: 33px; height: 33px; left: 354px; top: 718px; position: absolute">
-            <div style="width: 24.75px; height: 0px; left: 4.12px; top: 8.25px; position: absolute; border: 2px white solid"></div>
-            <div style="width: 19.25px; height: 27.50px; left: 6.88px; top: 2.75px; position: absolute; border: 2px white solid"></div>
-            <div style="width: 0px; height: 8.25px; left: 13.75px; top: 15.12px; position: absolute; border: 2px white solid"></div>
-            <div style="width: 0px; height: 8.25px; left: 19.25px; top: 15.12px; position: absolute; border: 2px white solid"></div>
-        </div>
-        <div style="width: 48px; height: 48px; left: 855px; top: 184px; position: absolute">
-            <div style="width: 28px; height: 36px; left: 10px; top: 6px; position: absolute; border: 2.80px white solid"></div>
-        </div>
+    <div class="full-background">
+
+        <div class="one-piece-text">Demon Slayer</div>
+        <div class="my-list-text">My List</div>
+        
+        <img style="width: 274px; height: 392px; left: 113px; top: 281px; position: absolute" src="../assets/images/Demon Slayer (1).webp" />
+
+        <div class="icon-container">
+            <img class="icon-image" src="../assets/images/heart.svg" alt="Heart Icon">
+          </div>
+
+          <div class="trash-icon-container">
+            <img class="trash-icon" src="../assets/images/trash-2.svg" alt="Trash Icon">
+          </div>
+
+          <div class="bookmark-icon-container-white">
+            <img class="bookmark-icon-white" src="../assets/images/bookmarkwhite.svg" alt="Bookmark Icon">
+          </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
